# voice-com

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  START_VOICE_SERVER.bat  install.ps1  pyproject.toml  requirements.txt  voice.config.example.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  rust-check.yml
docs/: CNAME  index.html
tests/: test_imports.py
voice-mcp/: .gitignore  Cargo.toml
voice-mcp/src/: main.rs
