[package]
name = "voice-mcp"
version = "0.2.0"
edition = "2021"
description = "Rust MCP server for voice - TTS via edge-tts, STT via voice_server.py, with checkpoint recovery"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "process"] }
reqwest = { version = "0.13", features = ["json"] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
